Fix the orange background 'bleed' through the border radius, on Chrome.

--- a/css/hn-web.css
+++ b/css/hn-web.css
@@ -563,5 +563,8 @@ ol.grouped-tableview-links li>a:hover{
 		margin-top: 10px;
 		margin-bottom: 10px;
 	}
-
+	.view>header{
+		border-top-left-radius: 2px;
+		border-top-right-radius: 2px;
+	}
 }
